test/pt/up/fe/comp/cp2/semanticanalysis/additionalTests/methodSignatureWrongLiteralType.jmm
class Test {
    void foo(int a) {}

    void callFoo() {
        foo(true); // error: wrong literal type, expected int
    }
}
